# django-boilerplate

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
config/: settings.py  urls.py
env/: .env.sample  sample.env
