[tool.black]
line-length = 79
exclude = '''
/(
  \.git
 | \.venv
 )/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry]
name = "django-postgres-boilerplate"
version = "0.1.0"
description = ""
authors = ["Tarik Nazorek"]
readme = "README.md"
packages = [{include = "django_postgres_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.1"
psycopg = "^3.1.18"
gunicorn = "^21.2.0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit-hooks = "^4.5.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
